####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = add_importkey.png authors.html changelog.html corplogo.png decrypt.html decrypt.png encrypt.html encrypt.png index.html key_info.png keymanagement.xpm keys_adding.html keys.html license.html mainwindow.xpm misc.html pgp5profile.xpm profileedit.xpm whyencrypt.html 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/add_importkey.png $(kde_htmldir)/en/geheimnis/add_importkey.png
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/authors.html $(kde_htmldir)/en/geheimnis/authors.html
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/changelog.html $(kde_htmldir)/en/geheimnis/changelog.html
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/corplogo.png $(kde_htmldir)/en/geheimnis/corplogo.png
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/decrypt.html $(kde_htmldir)/en/geheimnis/decrypt.html
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/decrypt.png $(kde_htmldir)/en/geheimnis/decrypt.png
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/encrypt.html $(kde_htmldir)/en/geheimnis/encrypt.html
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/encrypt.png $(kde_htmldir)/en/geheimnis/encrypt.png
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/index.html $(kde_htmldir)/en/geheimnis/index.html
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/key_info.png $(kde_htmldir)/en/geheimnis/key_info.png
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/keymanagement.xpm $(kde_htmldir)/en/geheimnis/keymanagement.xpm
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/keys_adding.html $(kde_htmldir)/en/geheimnis/keys_adding.html
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/keys.html $(kde_htmldir)/en/geheimnis/keys.html
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/license.html $(kde_htmldir)/en/geheimnis/license.html
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/mainwindow.xpm $(kde_htmldir)/en/geheimnis/mainwindow.xpm
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/misc.html $(kde_htmldir)/en/geheimnis/misc.html
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/pgp5profile.xpm $(kde_htmldir)/en/geheimnis/pgp5profile.xpm
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/profileedit.xpm $(kde_htmldir)/en/geheimnis/profileedit.xpm
	$(mkinstalldirs) $(kde_htmldir)/en/geheimnis/
	$(INSTALL_DATA) $(srcdir)/whyencrypt.html $(kde_htmldir)/en/geheimnis/whyencrypt.html

uninstall-local:
	-rm -f $(kde_htmldir)/en/geheimnis/add_importkey.png
	-rm -f $(kde_htmldir)/en/geheimnis/authors.html
	-rm -f $(kde_htmldir)/en/geheimnis/changelog.html
	-rm -f $(kde_htmldir)/en/geheimnis/corplogo.png
	-rm -f $(kde_htmldir)/en/geheimnis/decrypt.html
	-rm -f $(kde_htmldir)/en/geheimnis/decrypt.png
	-rm -f $(kde_htmldir)/en/geheimnis/encrypt.html
	-rm -f $(kde_htmldir)/en/geheimnis/encrypt.png
	-rm -f $(kde_htmldir)/en/geheimnis/index.html
	-rm -f $(kde_htmldir)/en/geheimnis/key_info.png
	-rm -f $(kde_htmldir)/en/geheimnis/keymanagement.xpm
	-rm -f $(kde_htmldir)/en/geheimnis/keys_adding.html
	-rm -f $(kde_htmldir)/en/geheimnis/keys.html
	-rm -f $(kde_htmldir)/en/geheimnis/license.html
	-rm -f $(kde_htmldir)/en/geheimnis/mainwindow.xpm
	-rm -f $(kde_htmldir)/en/geheimnis/misc.html
	-rm -f $(kde_htmldir)/en/geheimnis/pgp5profile.xpm
	-rm -f $(kde_htmldir)/en/geheimnis/profileedit.xpm
	-rm -f $(kde_htmldir)/en/geheimnis/whyencrypt.html

####### kdevelop will overwrite this part!!! (end)############

KDE_LANG = en
KDE_DOCS = geheimnis

