####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = addName.png application_pgp.png decrypt.png disableKey.png docked.png editKey.png encrypt.png exportKey.png genKeys.png icon_key_bad.png icon_key_disabled.png icon_key_expired.png icon_key_pub2.png icon_key_pub.png icon_key_revoked.png icon_key_sec_def.png icon_key_sec.png icon_name_bad.png icon_name_pub2.png icon_name_pub.png icon_name_sec.png icon_sig_bad.png icon_sig_pub2.png icon_sig_pub.png icon_sig_sec.png importKey.png keyInfo.png km.png prefs.png removeKey.png revokeKey.png revokeSig.png signKey.png trust_0.png trust_1.png trust_2.png trust_3.png trust_4.png valid_0.png valid_1.png valid_2.png valid_3.png valid_4.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/addName.png $(kde_datadir)/geheimnis/toolbar/addName.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/application_pgp.png $(kde_datadir)/geheimnis/pics/application_pgp.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/decrypt.png $(kde_datadir)/geheimnis/pics/decrypt.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/disableKey.png $(kde_datadir)/geheimnis/toolbar/disableKey.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/docked.png $(kde_datadir)/geheimnis/pics/docked.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/editKey.png $(kde_datadir)/geheimnis/toolbar/editKey.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/encrypt.png $(kde_datadir)/geheimnis/toolbar/encrypt.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/exportKey.png $(kde_datadir)/geheimnis/toolbar/exportKey.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/genKeys.png $(kde_datadir)/geheimnis/toolbar/genKeys.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_key_bad.png $(kde_datadir)/geheimnis/icons/icon_key_bad.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_key_disabled.png $(kde_datadir)/geheimnis/icons/icon_key_disabled.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_key_expired.png $(kde_datadir)/geheimnis/icons/icon_key_expired.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_key_pub2.png $(kde_datadir)/geheimnis/icons/icon_key_pub2.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_key_pub.png $(kde_datadir)/geheimnis/icons/icon_key_pub.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_key_revoked.png $(kde_datadir)/geheimnis/icons/icon_key_revoked.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_key_sec_def.png $(kde_datadir)/geheimnis/icons/icon_key_sec_def.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_key_sec.png $(kde_datadir)/geheimnis/icons/icon_key_sec.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_name_bad.png $(kde_datadir)/geheimnis/icons/icon_name_bad.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_name_pub2.png $(kde_datadir)/geheimnis/icons/icon_name_pub2.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_name_pub.png $(kde_datadir)/geheimnis/icons/icon_name_pub.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_name_sec.png $(kde_datadir)/geheimnis/icons/icon_name_sec.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_sig_bad.png $(kde_datadir)/geheimnis/icons/icon_sig_bad.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_sig_pub2.png $(kde_datadir)/geheimnis/icons/icon_sig_pub2.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_sig_pub.png $(kde_datadir)/geheimnis/icons/icon_sig_pub.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/icons/
	$(INSTALL_DATA) $(srcdir)/icon_sig_sec.png $(kde_datadir)/geheimnis/icons/icon_sig_sec.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/importKey.png $(kde_datadir)/geheimnis/toolbar/importKey.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/keyInfo.png $(kde_datadir)/geheimnis/toolbar/keyInfo.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/km.png $(kde_datadir)/geheimnis/toolbar/km.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/prefs.png $(kde_datadir)/geheimnis/toolbar/prefs.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/removeKey.png $(kde_datadir)/geheimnis/toolbar/removeKey.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/revokeKey.png $(kde_datadir)/geheimnis/toolbar/revokeKey.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/revokeSig.png $(kde_datadir)/geheimnis/toolbar/revokeSig.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/toolbar/
	$(INSTALL_DATA) $(srcdir)/signKey.png $(kde_datadir)/geheimnis/toolbar/signKey.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/trust_0.png $(kde_datadir)/geheimnis/pics/trust_0.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/trust_1.png $(kde_datadir)/geheimnis/pics/trust_1.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/trust_2.png $(kde_datadir)/geheimnis/pics/trust_2.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/trust_3.png $(kde_datadir)/geheimnis/pics/trust_3.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/trust_4.png $(kde_datadir)/geheimnis/pics/trust_4.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/valid_0.png $(kde_datadir)/geheimnis/pics/valid_0.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/valid_1.png $(kde_datadir)/geheimnis/pics/valid_1.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/valid_2.png $(kde_datadir)/geheimnis/pics/valid_2.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/valid_3.png $(kde_datadir)/geheimnis/pics/valid_3.png
	$(mkinstalldirs) $(kde_datadir)/geheimnis/pics/
	$(INSTALL_DATA) $(srcdir)/valid_4.png $(kde_datadir)/geheimnis/pics/valid_4.png

uninstall-local:
	-rm -f $(kde_datadir)/geheimnis/toolbar/addName.png
	-rm -f $(kde_datadir)/geheimnis/pics/application_pgp.png
	-rm -f $(kde_datadir)/geheimnis/pics/decrypt.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/disableKey.png
	-rm -f $(kde_datadir)/geheimnis/pics/docked.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/editKey.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/encrypt.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/exportKey.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/genKeys.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_key_bad.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_key_disabled.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_key_expired.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_key_pub2.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_key_pub.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_key_revoked.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_key_sec_def.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_key_sec.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_name_bad.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_name_pub2.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_name_pub.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_name_sec.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_sig_bad.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_sig_pub2.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_sig_pub.png
	-rm -f $(kde_datadir)/geheimnis/icons/icon_sig_sec.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/importKey.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/keyInfo.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/km.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/prefs.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/removeKey.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/revokeKey.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/revokeSig.png
	-rm -f $(kde_datadir)/geheimnis/toolbar/signKey.png
	-rm -f $(kde_datadir)/geheimnis/pics/trust_0.png
	-rm -f $(kde_datadir)/geheimnis/pics/trust_1.png
	-rm -f $(kde_datadir)/geheimnis/pics/trust_2.png
	-rm -f $(kde_datadir)/geheimnis/pics/trust_3.png
	-rm -f $(kde_datadir)/geheimnis/pics/trust_4.png
	-rm -f $(kde_datadir)/geheimnis/pics/valid_0.png
	-rm -f $(kde_datadir)/geheimnis/pics/valid_1.png
	-rm -f $(kde_datadir)/geheimnis/pics/valid_2.png
	-rm -f $(kde_datadir)/geheimnis/pics/valid_3.png
	-rm -f $(kde_datadir)/geheimnis/pics/valid_4.png

####### kdevelop will overwrite this part!!! (end)############
